@@ -1,3 +1,9 @@
+2019-05-08  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Don't pop the final path entry off in the pathsPrepend and
+	pathsAppend functions: the compile-time fallback may have been
+	disabled.
+
 2019-05-02  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Add a 'show' option to the lhapdf script.
